@startuml

title __CUSTOMVIEW's Class Diagram__\n

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace customview {
        class com.google.firebase.ml.md.java.customview.AutoFitTextureView {
            - ratioHeight : int
            - ratioWidth : int
            + AutoFitTextureView()
            + AutoFitTextureView()
            + AutoFitTextureView()
            + setAspectRatio()
            # onMeasure()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace customview {
        class com.google.firebase.ml.md.java.customview.OverlayView {
            - callbacks : List<DrawCallback>
            + OverlayView()
            + addCallback()
            + draw()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace customview {
        interface com.google.firebase.ml.md.java.customview.OverlayView.DrawCallback {
            {abstract} + drawCallback()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace customview {
        class com.google.firebase.ml.md.java.customview.RecognitionScoreView {
            {static} - TEXT_SIZE_DIP : float
            - bgPaint : Paint
            - fgPaint : Paint
            - results : List<Recognition>
            - textSizePx : float
            + RecognitionScoreView()
            + onDraw()
            + setResults()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace customview {
        interface com.google.firebase.ml.md.java.customview.ResultsView {
            {abstract} + setResults()
        }
      }
    }
  }
  

  com.google.firebase.ml.md.java.customview.AutoFitTextureView -up-|> android.view.TextureView
  com.google.firebase.ml.md.java.customview.OverlayView -up-|> android.view.View
  com.google.firebase.ml.md.java.customview.OverlayView +-down- com.google.firebase.ml.md.java.customview.OverlayView.DrawCallback
  com.google.firebase.ml.md.java.customview.RecognitionScoreView .up.|> com.google.firebase.ml.md.java.customview.ResultsView
  com.google.firebase.ml.md.java.customview.RecognitionScoreView -up-|> android.view.View


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
